# tithon

./: .gitattributes  .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  DECISIONS.md  Makefile  PROGRESS.md  README.md  pyproject.toml  release-please-config.json
.claude/: settings.json
.codex/: config.toml
.github/workflows/: release-please.yml
daemon/: pyproject.toml
daemon/src/tithon/: artifacts.py  daemon.py  journal.py  kernel.py  widgets.py
daemon/tests/: test_artifacts.py  test_backpressure.py  test_folding.py  test_journal_origin.py  test_widgets.py
daemon/tithon/: __init__.py  __main__.py  cli.py  daemon.py  folding.py  journal.py  kernel.py  widgets.py
docs/: SPEC.md  design.md  known_issue.md  status.md  vscode-jupyter-comparison.md
extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.integration.json  tsconfig.json  vitest.config.ts
extension/integration/: runTest.ts  seed.ts
extension/integration/suite/: addcell.test.ts  autocellview.test.ts  autocellviewshot.test.ts  autoopen.test.ts  autostart.test.ts  bug_addmd.test.ts  bug_editsave.test.ts  bug_emptycell.test.ts  bug_imageorder.test.ts  bug_input_hang.test.ts  bug_insert_reconnect.test.ts  bug_insertheader.test.ts  bug_kerneldeath.test.ts  bug_mdsave.test.ts  bug_rerun.test.ts  bug_rerun_reconnect.test.ts  bug_runall_error.test.ts  bug_runall_md.test.ts  bug_staleedit.test.ts  celltoggle.test.ts  clearspinner.test.ts  dupcode.test.ts  editedcell.test.ts  editordefault.test.ts  index.ts  interrupt.test.ts  live.test.ts  livedisplay.test.ts  livereconnect.test.ts  lsp.test.ts  lspdef.test.ts  lspinlay.test.ts  lsproundtrip.test.ts  multicell.test.ts  opentext.test.ts  opentextshot.test.ts  (+14 more)
extension/src/: artifactCache.ts  cellAttach.ts  codeLens.ts  css.d.ts  daemonClient.ts  daemonProcess.ts  extension.ts  liveSync.ts  notebookSerializer.ts  outputFold.ts  richOutput.ts  serializer.ts  sessionClient.ts  sessionController.ts  widgetRender.ts  widgetRendererEntry.ts
extension/test/: artifactCache.test.ts  cellAttach.test.ts  liveSync.test.ts  outputFold.test.ts  reconnectClient.test.ts  restore.test.ts  richDaemon.test.ts  richOutput.test.ts  serializer.test.ts  setup.ts  widget.test.ts
prompts/: stage-a.goal.txt  stage-a.md  stage-b.goal.txt  stage-b.md
scripts/: Makefile  _check_input_bridge.py  _check_kernel_death.py  _check_v2.py  _clear_client.py  _lastseq.py  _workdir_client.py  bughunt.sh  demo_reconnect.sh  lib.sh  run_verify.sh  shot.sh  shotlsp.sh  v1.sh  v10.sh  v11.sh  v12.sh  v13.sh  v14.sh  v15.sh  v16.sh  v17.sh  v18.sh  v19.sh  v2.sh  v20.sh  v21.sh  v22.sh  v23.sh  v24.sh  v26.sh  v28.sh  v29.sh  v3.sh  v30.sh  v31.sh  v32.sh  v33.sh  v34.sh  v35.sh  (+15 more)
scripts/corpus/: magics_markdown.py
site/: README.md  index.html
src/tithon/: __init__.py  artifacts.py  cli.py  daemon.py  folding.py  journal.py  kernel.py
test/: test_artifacts.py  test_clear.py  test_folding.py  test_gc.py  test_orphan.py  test_restart_drain.py  test_runall_batch.py  test_session_layout.py  test_widgets.py
verify/: _check_v1.py  _check_v3.py  _check_v5.py  _stalled_client.py  demo_reconnect.sh  lib.sh  run_verify.sh  shot.sh  v1.sh  v10.sh  v12.sh  v13.sh  v15.sh  v16.sh  v2.sh  v20.sh  v21.sh  v22.sh  v23.sh  v24.sh  v25.sh  v27.sh  v29.sh  v3.sh  v30.sh  v4.sh  v5.sh  v6.sh  v8.sh
verify/corpus/: _gen.py  crlf_mixed.py  crlf_string_marker.py  empty_cells.py  mixed_indent.py  module_header.py  no_final_newline.py  string_marker.py
(+15 files in other folders)
