[project]
name = "tithon"
version = "0.0.1"
description = "Tithon — persistent remote interactive Python sessions"
requires-python = ">=3.11"
dependencies = [
    "jupyter_client>=8",
    "ipykernel>=6",
    "websockets>=12",
]

[project.scripts]
tithon = "tithon.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "matplotlib",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tithon"]
